<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>me.despical</groupId>
	<artifactId>tnt-run</artifactId>
	<version>2.3.0</version>
	<name>TNT Run</name>

	<properties>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<serverDirectory>C:\Users\berke\OneDrive\Masaüstü\Server\plugins</serverDirectory>
	</properties>

	<developers>
		<developer>
			<name>Despical</name>
			<url>https://www.spigotmc.org/members/615094/</url>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
	</developers>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<forceCreation>true</forceCreation>
					<outputDirectory>${serverDirectory}</outputDirectory>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<createDependencyReducedPom>false</createDependencyReducedPom>
							<minimizeJar>true</minimizeJar>

							<relocations>
								<relocation>
									<pattern>org.bstats</pattern>
									<shadedPattern>me.despical.tntrun.utils</shadedPattern>
								</relocation>
								<relocation>
									<pattern>com.zaxxer.hikari</pattern>
									<shadedPattern>me.despical.tntrun.database</shadedPattern>
								</relocation>                                <relocation>
									<pattern>org.slf4j</pattern>
									<shadedPattern>me.despical.tntrun.logging</shadedPattern>
								</relocation>
							</relocations>

							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/**</exclude>
									</excludes>
								</filter>
							</filters>

						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>


	<repositories>
		<repository>
			<id>papermc-repo</id>
			<url>https://repo.papermc.io/repository/maven-public/</url>
		</repository>
		<repository>
			<id>sonatype</id>
			<url>https://oss.sonatype.org/content/groups/public/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>papi-repo</id>
			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.github.Despical</groupId>
			<artifactId>Commons</artifactId>
			<version>1.6.1</version>
		</dependency>
		<dependency>
			<groupId>com.github.Despical</groupId>
			<artifactId>CommandFramework</artifactId>
			<version>1.1.9</version>
		</dependency>
		<dependency>
			<groupId>com.github.Despical</groupId>
			<artifactId>InventoryFramework</artifactId>
			<version>2.2.5</version>
		</dependency>
		<dependency>
			<groupId>com.github.Rapha149</groupId>
			<artifactId>SignGUI</artifactId>
			<version>1.9.2</version>
		</dependency>
		<dependency>
			<groupId>org.bstats</groupId>
			<artifactId>bstats-bukkit</artifactId>
			<version>3.0.2</version>
		</dependency>
		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.11.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.papermc.paper</groupId>
			<artifactId>paper-api</artifactId>
			<version>1.19.4-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

</project>